# cpp_contests

./: .clang-tidy  .cmake-format.py  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  Makefile  license  makefile  makefile_windows  package-lock.json  pyproject.toml  readme.md  requirements.txt  vcpkg.json
.github/workflows/: workflow.yml
cmake/: Testing.cmake  Utils.cmake  Warnings.cmake
cmake/modules/: CodingStandards.cmake  Installing.cmake  Optimization.cmake  Testing.cmake
cmake/package_config/: config.cmake.in
cmake/presets/: gcc.json  llvm.json
cmake/scripts/: strip_comments.py
cmake/test_install/: CMakeLists.txt.in  CMakePresets.json.in  vcpkg.json.in
code_coverage_test/: CMakeLists.txt  cli.cpp  readme.md  solution.cpp  solution.hpp
code_coverage_test/lit_tests/: CMakeLists.txt  lit.site.cfg.py.in  test_1.lit  test_2.lit
k_max/: CMakeLists.txt  readme.md  solution.cpp  solution.hpp
k_max/include/k_max/: solution.hpp
k_max/unit_tests/: CMakeLists.txt  test_1.cpp
lru_cache/: CMakeLists.txt  cli.cpp  readme.md
lru_cache/include/lru_cache/: solution.hpp
lru_cache/lit_tests/: CMakeLists.txt
lru_cache/unit_tests/: CMakeLists.txt  test_1.cpp
missing_numbers/: CMakeLists.txt  cli.cpp  readme.md  solution.hpp
missing_numbers/include/missing_numbers/: solution.hpp
missing_numbers/lit_tests/: CMakeLists.txt  lit.site.cfg.py.in  test_1.lit  test_2.lit
missing_numbers/unit_tests/: CMakeLists.txt  test_1.cpp
perfect_cache/: CMakeLists.txt  cli.cpp  readme.md  solution.cpp
perfect_cache/include/perfect_cache/: solution.hpp
perfect_cache/unit_tests/: CMakeLists.txt  test.cpp  test_1.cpp
reverse_list/: CMakeLists.txt  readme.md
reverse_list/include/reverse_list/: solution.hpp
reverse_list/unit_tests/: CMakeLists.txt  test_1.cpp
scripts/: CPackOptions.cmake.in  CodingStandards.cmake  Installing.cmake  Optimization.cmake  Testing.cmake  Utils.cmake  Warnings.cmake  conanfile.py  get_conan_profile_options.py  makefile_linux  makefile_windows  pick_conan_profile.py  strip_comments.py
scripts/installing/: CMakeLists.txt.in  conanfile.py.in  main.cpp.in
src/: CMakeLists.txt
src/geometry/: CMakeLists.txt  cli.cpp  readme.md
src/geometry/include/geometry/: matrix.hpp  matrix_view.hpp  primitives.hpp  triangle.hpp
src/geometry/unit_tests/: CMakeLists.txt  test.cpp  triangle.cpp
src/k_max/: CMakeLists.txt  readme.md  solution.cpp
src/k_max/unit_tests/: CMakeLists.txt  test_1.cpp
src/lru_cache/: CMakeLists.txt  readme.md
src/lru_cache/lit_tests/: CMakeLists.txt  test_1.lit
src/missing_numbers/: CMakeLists.txt  readme.md
src/missing_numbers/lit_tests/: CMakeLists.txt  test_1.lit
src/missing_numbers/unit_tests/: CMakeLists.txt  test_1.cpp
src/perfect_cache/: CMakeLists.txt  readme.md
src/perfect_cache/unit_tests/: CMakeLists.txt  test.cpp
src/reverse_list/: CMakeLists.txt  readme.md
src/reverse_list/include/reverse_list/: solution.hpp
src/reverse_list/unit_tests/: CMakeLists.txt  test_1.cpp
src/two_queue_cache/: CMakeLists.txt  readme.md
src/two_queue_cache/include/two_queue_cache/: solution.hpp
src/two_queue_cache/lit_tests/: CMakeLists.txt
src/utils/: CMakeLists.txt  readme.md
src/utils/include/utils/: math.hpp  type_traits.hpp  utils.hpp  warnings.hpp
src/utils/unit_tests/: test_1.cpp
src/valid_parenthesis/: CMakeLists.txt  readme.md  solution.cpp
src/valid_parenthesis/lit_tests/: CMakeLists.txt  test_1.lit  test_3.lit
two_queue_cache/: CMakeLists.txt  cli.cpp  readme.md
two_queue_cache/include/two_queue_cache/: solution.hpp
two_queue_cache/lit_tests/: CMakeLists.txt  test_1.lit
utils/: CMakeLists.txt  readme.md
utils/include/utils/: utils.hpp
utils/unit_tests/: CMakeLists.txt  test_1.cpp
valid_parenthesis/: CMakeLists.txt  readme.md  solution.cpp
valid_parenthesis/lit_tests/: CMakeLists.txt  lit.site.cfg.py.in  test_1.lit  test_2.lit  test_3.lit
