add_library(missing_numbers INTERFACE)
target_include_directories(missing_numbers INTERFACE .)
target_compile_features(missing_numbers INTERFACE cxx_std_20)

add_executable(missing_numbers_cli)
target_sources(missing_numbers_cli PRIVATE cli.cpp)
target_add_headers_as_sources(missing_numbers_cli missing_numbers)
target_link_libraries(missing_numbers_cli PRIVATE missing_numbers)
set_target_properties(missing_numbers_cli PROPERTIES OUTPUT_NAME missing_numbers)
target_enable_instrumentation(missing_numbers_cli)

add_subdirectory(unit_tests)
add_subdirectory(lit_tests)
