add_executable(valid_parenthesis_cli)

target_sources(valid_parenthesis_cli PRIVATE solution.cpp)
target_compile_features(valid_parenthesis_cli PRIVATE cxx_std_20)
target_enable_warnings(valid_parenthesis_cli)
set_target_properties(valid_parenthesis_cli PROPERTIES OUTPUT_NAME valid_parenthesis)

add_subdirectory(lit_tests)
