add_executable(missing_numbers_unit_tests)

find_package(Boost REQUIRED COMPONENTS headers)

target_link_libraries(missing_numbers_unit_tests PRIVATE missing_numbers)
target_link_libraries(missing_numbers_unit_tests PRIVATE Boost::headers)

target_sources(missing_numbers_unit_tests PRIVATE test_1.cpp)
target_add_headers_as_sources(missing_numbers_unit_tests missing_numbers)

target_enable_instrumentation(missing_numbers_unit_tests)
target_enable_coding_standards(missing_numbers_unit_tests)

add_unit_tests(NAME missing_numbers_unit_tests TARGET missing_numbers_unit_tests)
