add_executable(reverse_list_unit_tests)

find_package(Boost REQUIRED COMPONENTS headers)

target_link_libraries(reverse_list_unit_tests PRIVATE reverse_list)
target_link_libraries(reverse_list_unit_tests PRIVATE Boost::headers)

target_sources(reverse_list_unit_tests PRIVATE test_1.cpp)
target_add_headers_as_sources(reverse_list_unit_tests reverse_list)
target_enable_instrumentation(reverse_list_unit_tests)
target_enable_coding_standards(reverse_list_unit_tests)

add_unit_tests(NAME reverse_list_unit_tests TARGET reverse_list_unit_tests)
