add_executable(k_max_unit_tests)

target_link_libraries(k_max_unit_tests PRIVATE k_max)
target_link_libraries(k_max_unit_tests PRIVATE Boost::headers)

target_sources(k_max_unit_tests PRIVATE test_1.cpp)
target_compile_features(k_max_unit_tests PRIVATE cxx_std_23)
target_add_headers_as_sources(k_max_unit_tests k_max)

target_enable_instrumentation(k_max_unit_tests)
target_enable_coding_standards(k_max_unit_tests)

add_unit_tests(NAME k_max_unit_tests TARGET k_max_unit_tests)
