add_executable(perfect_cache_unit_tests)

target_link_libraries(perfect_cache_unit_tests PRIVATE Boost::headers)
target_link_libraries(perfect_cache_unit_tests PRIVATE fmt::fmt)
target_link_libraries(perfect_cache_unit_tests PRIVATE lru_cache)
target_link_libraries(perfect_cache_unit_tests PRIVATE perfect_cache)
target_link_libraries(perfect_cache_unit_tests PRIVATE two_queue_cache)
target_link_libraries(perfect_cache_unit_tests PRIVATE utils)

target_link_libraries(perfect_cache_unit_tests PRIVATE Boost::program_options)

target_sources(perfect_cache_unit_tests PRIVATE test.cpp)
target_add_headers_as_sources(perfect_cache_unit_tests perfect_cache)

target_enable_instrumentation(perfect_cache_unit_tests)
target_enable_coding_standards(perfect_cache_unit_tests)

add_unit_tests(NAME perfect_cache_unit_tests TARGET perfect_cache_unit_tests)
